--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						--></ul> 
 						<ul class="icons">
 							<li><a target="_blank" href="https://linkedin.com/in/ahmedmaouloud-aboubacar" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a target="_blank" href="#https://github.com/ahmedmaouloud-aboubacar/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a target="_blank" href="https://github.com/ahmedmaouloud-aboubacar/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							<!-- <li><a href="" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 						</ul>
 					</nav>
@@ -217,7 +217,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a target="_blank" href="https://linkedin.com/in/ahmedmaouloud-aboubacar" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a target="_blank" href="#https://github.com/ahmedmaouloud-aboubacar/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a target="_blank" href="https://github.com/ahmedmaouloud-aboubacar/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 							</section>
 						</section>
